@@ -138,6 +138,16 @@ class ICommonMetadata(zope.interface.Interface):
         required=False,
         max_length=50)
 
+    hpTeaserTitle = zope.schema.Text(
+        title=_('Homepage teaser title'),
+        required=False,
+        max_length=20)
+
+    hpTeaserText = zope.schema.Text(
+        title=_('Homepage teaser text'),
+        required=False,
+        max_length=50)
+
     vg_wort_id = zope.schema.TextLine(
         title=_('VG Wort Id'),
         required=False)
