@@ -274,6 +274,8 @@ included. Setup an article with ICommonMetadata:
 >>> art2.shortTeaserText = u'Die Streiks werden Sarkozy nicht bezwingen'
 >>> art2.year = 2007
 >>> art2.volume = 4
+>>> art2.hpTeaserText = None
+>>> art2.hpTeaserTitle = None
 
 Provide the interface:
 
@@ -298,6 +300,10 @@ Insert the article to the feed:
         <title py:pytype="str">Frankreich</title>
         <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
       </short>
+      <homepage>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </homepage>
     </block>
     <block href="art1"/>
   </container>
@@ -310,6 +316,8 @@ changes:
 
 >>> art2.teaserTitle = 'New Title'
 >>> art2.supertitle = 'Fronkroisch'
+>>> art2.hpTeaserTitle = 'HP Teaser Title'
+>>> art2.hpTeaserText = 'HP Teaser Text'
 >>> feed.updateMetadata(art2)
 >>> print feed.xml_source
 <channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -325,6 +333,10 @@ changes:
         <title py:pytype="str">Frankreich</title>
         <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
       </short>
+      <homepage>
+        <title py:pytype="str">HP Teaser Title</title>
+        <text py:pytype="str">HP Teaser Text</text>
+      </homepage>
     </block>
     <block href="art1"/>
   </container>
@@ -358,6 +370,10 @@ too:
         <title xsi:nil="true"/>
         <text xsi:nil="true"/>
       </short>
+      <homepage>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </homepage>
       <references>
         <reference type="intern" href="http://xml.zeit.de/online/2007/01/Somalia"/>
         <reference type="intern" href="http://xml.zeit.de/online/2007/01/eta-zapatero"/>
@@ -372,12 +388,61 @@ too:
         <title py:pytype="str">Frankreich</title>
         <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
       </short>
+      <homepage>
+        <title py:pytype="str">HP Teaser Title</title>
+        <text py:pytype="str">HP Teaser Text</text>
+      </homepage>
     </block>
     <block href="art1"/>
   </container>
   <object_limit py:pytype="int">50</object_limit>
 </channel>
 
+When only one of the homepage teaser (title/text) is entered, we have only one
+node in the HTML:
+
+>>> art2.hpTeaserText = None
+>>> feed.updateMetadata(art2)
+>>> print feed.xml_source
+<channel xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <title py:pytype="str">Politik</title>
+  <container>
+    <block href="tct">
+      <supertitle xsi:nil="true"/>
+      <title xsi:nil="true"/>
+      <text xsi:nil="true"/>
+      <byline xsi:nil="true"/>
+      <short>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </short>
+      <homepage>
+        <title xsi:nil="true"/>
+        <text xsi:nil="true"/>
+      </homepage>
+      <references>
+        <reference type="intern" href="http://xml.zeit.de/online/2007/01/Somalia"/>
+        <reference type="intern" href="http://xml.zeit.de/online/2007/01/eta-zapatero"/>
+      </references>
+    </block>
+    <block href="art2">
+      <supertitle py:pytype="str">Fronkroisch</supertitle>
+      <title py:pytype="str">New Title</title>
+      <text py:pytype="str">In Frankreich wird massiv gestreikt. Doch den</text>
+      <byline py:pytype="str">Von Alain-Xavier Wurst</byline>
+      <short>
+        <title py:pytype="str">Frankreich</title>
+        <text py:pytype="str">Die Streiks werden Sarkozy nicht bezwingen</text>
+      </short>
+      <homepage>
+        <title py:pytype="str">HP Teaser Title</title>
+        <text xsi:nil="true"/>
+      </homepage>
+    </block>
+    <block href="art1"/>
+  </container>
+  <object_limit py:pytype="int">50</object_limit>
+</channel>
 
 
 >>> zope.app.component.hooks.setSite(old_site)
